jQuery的第一个入门程序

--- a/Demo01.入门/01.HelloWorld_.html
+++ b/Demo01.入门/01.HelloWorld_.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Insert title here</title>
+	<script type="text/javascript" src="./../script/jquery-1.7.2.js"></script>
+	<script type="text/javascript">
+		/*window.onload = function () {
+			var btnobj = document.getElementById("btnId");
+			//alert(btnobj); //dom对象
+			btnobj.onclick = function () {
+				alert("js原生的单机事件")
+			}
+		}*/
+		//alert($);//验证jQuery是不是已经引入成功了
+		$(function () {//表示页面加载完成的事件
+			var $btnboj = $("#btnId");//表示按id查询标签对象
+			$btnboj.click(function () {//绑定单击事件
+				alert("jQuery的单击事件");
+			});
+		});
+
+	</script>
 </head>
 <body>
 
