--- a/Demo01.入门/03.核心函数.html
+++ b/Demo01.入门/03.核心函数.html
@@ -7,14 +7,30 @@
 <script type="text/javascript">
 
 	//核心函数的4个作用
+
 	//传入参数为[函数]时：在文档加载完成后执行这个函数
+    $(function () {
+        alert("页面加载完成之后，自动调用这个函数");
+
+        $("<div>" +
+            "        <span>div-span1</span>" +
+            "        <span>div-span2</span>" +
+            "    </div>").appendTo("body");
+
+        alert($("button").length);//看看有几个button标签
+
+    })
 	//传入参数为[HTML字符串]时：根据这个字符串创建元素节点对象
+
 	//传入参数为[选择器字符串]时：根据这个字符串查找元素节点对象
+
 	//传入参数为[DOM对象]时：将DOM对象包装为jQuery对象返回
 
 </script>
 </head>
 <body>
-
+    <button>按钮1</button>
+    <button>按钮2</button>
+    <button>按钮3</button>
 </body>
 </html>
