用jQuery来操作CSS样式

--- a/Demo04.CSS样式操作/jqueryCss___.html
+++ b/Demo04.CSS样式操作/jqueryCss___.html
@@ -34,24 +34,35 @@
 		
 		$('#btn01').click(function(){
 			//addClass() - 向被选元素添加一个或多个类
+			$divEle.addClass("redDiv blueBorder");
+			//一次添加多个样式的时候要用空格隔开
 			
 		});
 		
 		$('#btn02').click(function(){
-			//removeClass() - 从被选元素删除一个或多个类 
+			//removeClass() - 从被选元素删除一个或多个类
+			$divEle.removeClass("redDiv blueBorder");
+
 			
 		});
 	
 		
 		$('#btn03').click(function(){
 			//toggleClass() - 对被选元素进行添加/删除类的切换操作 
-			
+			$divEle.toggleClass("redDiv")
 		});
 		
 		
 		$('#btn04').click(function(){
 			//offset() - 返回第一个匹配元素相对于文档的位置。
-		
+
+			console.log($divEle.offset());
+
+			$divEle.offset({
+				top:100,
+				left:50
+			});
+
 		});
 		
 	
