--- a/Demo05.事件/01.文档加载/load___.html
+++ b/Demo05.事件/01.文档加载/load___.html
@@ -6,24 +6,20 @@
 <script type="text/javascript"></script>
 <script type="text/javascript" src="../../script/jquery-1.7.2.js"></script>
 <script type="text/javascript">
-	//$(function(){}) 和  window.onload = function(){}的区别
-
-	
-	//1、导入jquery的.js文件
-	//2、可以在导入文件后的任意位置
-	//   1）、可以写在head里面，如果写在head里面可能导致元素查找不到等问题
-	//			1-1、只需要把代码写在$(function(){ jquery代码  })
-	//   2）、可以写在head之后的任意位置，我们一般不采用这种写法。
-	//	 3）、综合以上考虑，1-1
-	//3、window.onload & $(function(){})
-	//window.onload只可以使用一次
-	//$(function(){})可以使用多次
+	window.onload = function () { 
+		alert("原生的页面加载完成");
+	}
+	//jQuery的页面加载完成之后
+	$(function () {
+		alert("jQuery的页面加载完成之后");
+	});
 </script>
 </head>
 <body>
 	<button>我是按钮</button>
 	
-	<!-- <iframe src="http://www.baidu.com"></iframe> -->
-	
+	 <iframe src="http://localhost:8080"></iframe>
+	<img src="http://localhost:8080/1.jpg" alt="">
+
 </body>
 </html>
